# vb1

./: Dockerfile  README.md  cli.py  docker-compose.yml  instruction.md  requirements.txt  test_example.py
backend/python-ml/: Dockerfile  embedding_service.py  requirements.txt
backend/rust-core/: Cargo.toml  Dockerfile
backend/rust-core/src/: lib.rs  main.rs
scripts/: requirements.txt  test_custom_vectors.py  test_vector_db.py
src/calculator/: calculator.py
src/git_operations/: git_utils.py
